--- a/index.html
+++ b/index.html
@@ -22,9 +22,9 @@
             </style>
         </head>
         <body>
-            <img src= "images/yoink.jpg">
+      
             <iframe src="sketch.html"></iframe>
-            <h1>Do not go quietly into that good night</h1>
+            <h1><img src= "images/yoink.jpg">Do not go quietly into that good night</h1>
             <h2>Old age should burn and rave at close of day</h2>
             <h3><a href="index.html" target="_blank">Rage</a>, rage against the dying of the light</h3>
             <h4>Though wise men at their end know dark is right</h4>
