--- a/index.html
+++ b/index.html
@@ -1,35 +1,28 @@
 <!DOCTYPE html>
 <html>
     <head>
-        <title>Sketch</title>
-        <meta charset="utf-8">
-        <style>
-            h1{
-                color:blue;
-                text-align: center;
-            }
-            p{
-                color:red;
-                font-family: Helvetica;
-                font-size: 20px;
-            }
-            body {
-                background-color: #ffffff;
-                margin: 0;
-            }
-            img {align-items: center;}
-            iframe {align-items: center;}
-            </style>
-        </head>
+		<title>Sketch</title>
+        <link rel="stylesheet" type="text/css" href="css/stylesheet.css">
+    </head>
         <body>
-      
-            <iframe src="sketch.html"></iframe>
-            <h1><img src= "images/yoink.jpg">Do not go quietly into that good night</h1>
-            <h2>Old age should burn and rave at close of day</h2>
-            <h3><a href="index.html" target="_blank">Rage</a>, rage against the dying of the light</h3>
-            <h4>Though wise men at their end know dark is right</h4>
-            <h5>Becaue their words had forked no lightning they</h5>
-            <h6>Do not go quietly into that good night</h6>
-            <p>Rage, rage against the <a href="https://www.facebook.com">dying</a> of the light</p>
+            <h1 id="#heading"><a href="http://www.the.com" target="_blank"><img src= "images/yoink.jpg"  alt="yoink" style="height:300px;"></a><br>Do not go quietly into that good night
+			</h1>
+			
+            <h2>Old age should burn and rave at close of day<br>
+            	<a href="page1.html" target="_blank">Rage</a>, rage against the dying of the light<br>
+           		Though wise men at their end know dark is right<br>
+            	Becaue their words had forked no lightning they<br>
+            	Do not go quietly into that good night<br>
+            	Rage, rage against the <a href="https://www.facebook.com">dying</a> of the light
+			</h2>
+			<h3>
+				<iframe src="Sketch.html" align="center"></iframe>
+			</h3>
+			
+			<ol>
+				<li>brain</li>
+				<li>fingers</li>
+				<li>eyeballs</li>
+			</ol>
         </body>
 </html>
