--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html>
     <head>
 		<title>Sketch</title>
-        <link rel="stylesheet" type="text/css" href="css/stylesheet.css">
+        <link rel="stylesheet" type="text/css" href="stylesheet.css">
     </head>
         <body>
             <h1 id="#heading"><a href="http://www.the.com" target="_blank"><img src= "images/yoink.jpg"  alt="yoink" style="height:300px;"></a><br>Do not go quietly into that good night
@@ -16,7 +16,7 @@
             	Rage, rage against the <a href="https://www.facebook.com">dying</a> of the light
 			</h2>
 			<h3>
-				<iframe src="Sketch.html" align="center"></iframe>
+		    <iframe src="Sketch.html" align="center"></iframe>
 			</h3>
 			
 			<ol>
