--- a/index.html
+++ b/index.html
@@ -5,24 +5,111 @@
         <link rel="stylesheet" type="text/css" href="stylesheet.css">
     </head>
         <body>
-            <h1 id="#heading"><a href="http://www.the.com" target="_blank"><img src= "images/yoink.jpg"  alt="yoink" style="height:300px;"></a><br>Do not go quietly into that good night
-			</h1>
+       	<h2>
+				This live preview for <a href="http://en.wikipedia.org/">Wikipedia</a><div class="box"><iframe src="images/Donald_Trump_official_portraitt.png" width = "500px" height = "500px"></iframe></div> remains open on mouseover. <br>
+
+				<!--verse 1 -->
+				<a href="images/Donald_Trump_official_portraitt.png" target="_blank">I</a>
+				<a href="page1.html" target="_blank">speak</a>
+				<a href="page1.html" target="_blank">the</a>
+				<a href="page1.html" target="_blank">truth</a>
+				<a href="page1.html" target="_blank">for</a>
+				<a href="page1.html" target="_blank">all</a>
+				<a href="page1.html" target="_blank">of</a>
+				<a href="page1.html" target="_blank">you,</a>
+				<a href="page1.html" target="_blank">and</a>
+				<a href="page1.html" target="_blank">for</a>
+				<a href="page1.html" target="_blank">everyone</a>
+				<a href="page1.html" target="_blank">in</a>
+				<a href="page1.html" target="_blank">this</a>
+				<a href="page1.html" target="_blank">country</a>
+				<a href="page1.html" target="_blank">who</a>
+				<a href="page1.html" target="_blank">doesn't</a>
+				<a href="page1.html" target="_blank">have</a>
+				<a href="page1.html" target="_blank">a</a>
+				<a href="page1.html" target="_blank">voice.</a><br>
 			
-            <h2>Old age should burn and rave at close of day<br>
-            	<a href="page1.html" target="_blank">Rage</a>, rage against the dying of the light<br>
-           		Though wise men at their end know dark is right<br>
-            	Becaue their words had forked no lightning they<br>
-            	Do not go quietly into that good night<br>
-            	Rage, rage against the <a href="https://www.facebook.com">dying</a> of the light
+				<!--verse 2 -->
+				<a href="page1.html" target="_blank">I</a>
+				<a href="page1.html" target="_blank">speak</a>
+				<a href="page1.html" target="_blank">the</a>
+				<a href="page1.html" target="_blank">truth</a>
+				<a href="page1.html" target="_blank">on</a>
+				<a href="page1.html" target="_blank">behalf</a>
+				<a href="page1.html" target="_blank">of</a>
+				<a href="page1.html" target="_blank">the</a>
+				<a href="page1.html" target="_blank">factory</a>
+				<a href="page1.html" target="_blank">worker</a>
+				<a href="page1.html" target="_blank">who</a>
+				<a href="page1.html" target="_blank">lost</a>
+				<a href="page1.html" target="_blank">his</a>
+				<a href="page1.html" target="_blank">or</a>
+				<a href="page1.html" target="_blank">her</a>
+				<a href="page1.html" target="_blank">job.</a><br>
+				
+				<!--verse 3 -->
+				<a href="page1.html" target="_blank">I</a>
+				<a href="page1.html" target="_blank">speak</a>
+				<a href="page1.html" target="_blank">the</a>
+				<a href="page1.html" target="_blank">truth</a>
+				<a href="page1.html" target="_blank">on</a>
+				<a href="page1.html" target="_blank">behalf</a>
+				<a href="page1.html" target="_blank">of</a>
+				<a href="page1.html" target="_blank">the</a>
+				<a href="page1.html" target="_blank">Veteran</a>
+				<a href="page1.html" target="_blank">who</a>
+				<a href="page1.html" target="_blank">has</a>
+				<a href="page1.html" target="_blank">been</a>
+				<a href="page1.html" target="_blank">denied</a>
+				<a href="page1.html" target="_blank">the</a>
+				<a href="page1.html" target="_blank">medical</a>
+				<a href="page1.html" target="_blank">care</a>
+				<a href="page1.html" target="_blank">they</a>
+				<a href="page1.html" target="_blank">need –</a>
+				<a href="page1.html" target="_blank">and</a>
+				<a href="page1.html" target="_blank">so</a>
+				<a href="page1.html" target="_blank">many</a>
+				<a href="page1.html" target="_blank">are</a>
+				<a href="page1.html" target="_blank">not</a>
+				<a href="page1.html" target="_blank">making</a>
+				<a href="page1.html" target="_blank">it.</a>
+				<a href="page1.html" target="_blank">They</a>
+				<a href="page1.html" target="_blank">are</a>
+				<a href="page1.html" target="_blank">dying.</a><br>
+				
+				<!--verse 4 -->
+				<a href="page1.html" target="_blank">I</a>
+				<a href="page1.html" target="_blank">speak</a>
+				<a href="page1.html" target="_blank">the</a>
+				<a href="page1.html" target="_blank">truth</a>
+				<a href="page1.html" target="_blank">on</a>
+				<a href="page1.html" target="_blank">behalf</a>
+				<a href="page1.html" target="_blank">of</a>
+				<a href="page1.html" target="_blank">the</a>
+				<a href="page1.html" target="_blank">family</a>
+				<a href="page1.html" target="_blank">living</a>
+				<a href="page1.html" target="_blank">near</a>
+				<a href="page1.html" target="_blank">the</a>
+				<a href="page1.html" target="_blank">border</a>
+				<a href="page1.html" target="_blank">that</a>
+				<a href="page1.html" target="_blank">deserves</a>
+				<a href="page1.html" target="_blank">to</a>
+				<a href="page1.html" target="_blank">be</a>
+				<a href="page1.html" target="_blank">safe</a>
+				<a href="page1.html" target="_blank">in</a>
+				<a href="page1.html" target="_blank">their</a>
+				<a href="page1.html" target="_blank">own</a>
+				<a href="page1.html" target="_blank">country</a>
+				<a href="page1.html" target="_blank">but</a>
+				<a href="page1.html" target="_blank">is</a>
+				<a href="page1.html" target="_blank">instead</a>
+				<a href="page1.html" target="_blank">living</a>
+				<a href="page1.html" target="_blank">with</a>
+				<a href="page1.html" target="_blank">no</a>
+				<a href="page1.html" target="_blank">security</a>
+				<a href="page1.html" target="_blank">at</a>
+				<a href="page1.html" target="_blank">all.</a><br>
+		
 			</h2>
-			<h3>
-		    <iframe src="Sketch.html" align="center"></iframe>
-			</h3>
-			
-			<ol>
-				<li>brain</li>
-				<li>fingers</li>
-				<li>eyeballs</li>
-			</ol>
         </body>
 </html>
