--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html>
     <head>
 		<title>Sketch</title>
-        <link rel="stylesheet" type="text/css" href="stylesheet.css">
+        <link rel="stylesheet" type="text/css" href="css/stylesheet.css">
     </head>
         <body>
        	<h2>
