--- a/Info.html
+++ b/Info.html
@@ -1,13 +1,18 @@
 <!doctype html>
 <html>
 <head>
-<title>Page1</title>
-        <meta charset="utf-8">
-        <style>
+<meta charset="UTF-8">
+<title>Info</title>
+</head>
+<style>
             h1{
                 color:orangered;
                 text-align: center;
             }
+			h2{
+				color: orangered;
+				text-align: center;
+			}
             p{
                 color:red;
                 font-family: Helvetica;
@@ -19,10 +24,12 @@
 				text-align: center;
             }
             </style>
-</head>
-
 <body>
+	<h1>
+	"I Say No." <br>
+	Created by Matteo Marx
+	</h1>
+
 	
-    <h1>Don't believe the lies.</h1>
-    
+</body>
 </html>
