--- a/index.html
+++ b/index.html
@@ -1,11 +1,11 @@
 <!DOCTYPE html>
 <html>
     <head>
-		<title>Sketch</title>
+		<title>I say no.</title>
         <link rel="stylesheet" type="text/css" href="css/stylesheet.css">
     </head>
         <body>
-       	<h2>
+       		<h2>
 				<!--verse 1 -->
 				<a href="images/The-Nightmare-Mark-Bryan.jpg" target="_blank">I</a><div class="box"><img alt="NA" object-fit="contain" src="images/Donald_Trump_official_portraitt.png" width = "500px"></div>
 			
@@ -89,5 +89,6 @@
 				
 		
 			</h2>
+			<h6><a href="info.html" target="_blank">Info</a></h6>
         </body>
 </html>
