--- a/index.html
+++ b/index.html
@@ -89,6 +89,10 @@
 				
 		
 			</h2>
-			<h6><a href="info.html" target="_blank">Info</a></h6>
+			
+			<h6>
+				<!--Info page -->
+				<a href="info.html" target="_blank">Info</a>
+			</h6>
         </body>
 </html>
