--- a/index.html
+++ b/index.html
@@ -89,7 +89,8 @@
 				
 		
 			</h2>
-			<a href="" target="_blank">yoink</a><div ckass="Bonus"></div>
+			
+			<!--<a href="" target="_blank">yoink</a><div ckass="Bonus"></div>-->
 			
 			<h6>
 				<!--Info page -->
