change audio order

--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
   }
 }
 </style>
-	
+
 <link rel="stylesheet" href="css/title.css">
 <title>Strange Realm</title>
 </head>
@@ -46,11 +46,11 @@
             <source src="https://dl.dropboxusercontent.com/s/ziu0ihow3i1diuo/Forest.webm?dl=1" type="video/webm">
         </video>
 		<audio loop autoplay>
-			<source src="audio/forest.aac">
-			<source src="audio/forest.mp3">
+			<source src="audio/forest.mp3" type="audio/mp3">
+      <source src="audio/forest.aac">
 		</audio>
-		
+
 </div>
-	
+
 </body>
 </html>
