--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@
       <p>Your browser cannot play the provided video file.</p>
     </video>
 		<audio onload="this.play();" loop autoplay>
-			<source src="audio/forest.mp3" type="audio/mp3">
+			<source src="forest.mp3" type="audio/mp3">
 		</audio>
 </div>
 
