--- a/index.html
+++ b/index.html
@@ -38,7 +38,6 @@
 <link rel="stylesheet" href="css/title.css">
 <title>Strange Realm</title>
 </head>
-
 <body>
 	<div class="fullscreen-bg">
     <video onload="this.play();" loop muted autoplay class="fullscreen-bg__video">
@@ -46,10 +45,16 @@
       <source src="https://dl.dropboxusercontent.com/s/ziu0ihow3i1diuo/Forest.webm?dl=1" type="video/webm">
       <p>Your browser cannot play the provided video file.</p>
     </video>
-		<audio onload="this.play();" loop autoplay>
-			<source src="forest.mp3" type="audio/mp3">
-		</audio>
 </div>
+<script src="howler.js"></script>
+<script>
+    var sound = new Howl({
+      src: ['forest.mp3'],
+      autoplay: true,
+      loop: true
+    });
+    sound.play();
+</script>
 
 </body>
 </html>
