--- a/index.html
+++ b/index.html
@@ -44,7 +44,12 @@
       src: ['forest.mp3'],
       autoplay: true,
       loop: true,
-      html5:true
+      html5:true,
+      onplayerror: function() {
+        sound.once('unlock', function() {
+          sound.play();
+        });
+      }
     });
     sound.play();
 </script>
