--- a/index.html
+++ b/index.html
@@ -34,15 +34,11 @@
   }
 }
 </style>
-
-<link rel="stylesheet" href="css/title.css">
 <title>Strange Realm</title>
-</head>
 <script src="howler.js"></script>
 <script>
     var sound = new Howl({
       src: ['forest.mp3'],
-      autoplay: true,
       loop: true,
       html5:true,
       onplayerror: function() {
@@ -53,9 +49,10 @@
     });
     sound.play();
 </script>
+</head>
 <body>
 	<div class="fullscreen-bg">
-    <video onload="this.play();" loop muted autoplay class="fullscreen-bg__video">
+    <video onload="this.play();" controls loop muted class="fullscreen-bg__video">
 			<source src="https://dl.dropboxusercontent.com/s/f6d7w28jz60zagp/Forest.mp4?dl=1" type="video/mp4">
       <source src="https://dl.dropboxusercontent.com/s/ziu0ihow3i1diuo/Forest.webm?dl=1" type="video/webm">
       <p>Your browser cannot play the provided video file.</p>
