--- a/index.html
+++ b/index.html
@@ -41,6 +41,11 @@
       src: ['forest.mp3'],
       loop: true,
       html5:true,
+      onplayerror: function() {
+        sound.once('unlock', function() {
+          sound.play();
+        });
+      }
     });
     sound.play();
 </script>
